--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <div id="app" class="container">
-      <div class="entity entity--pac pacboy-active-light"></div>
+      <!-- <div class="entity entity--pac pacboy-active-light"></div> -->
     </div>
+    <script src="/js/entity.js"></script>
     <script src="/js/pacman.js"></script>
     <script src="/js/index.js"></script>
   </body>
