--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,8 @@
     <title>The Pacman</title>
   </head>
   <body>
-    <div id="app" class="container">
-      <!-- <div class="entity entity--pac pacboy-active-light"></div> -->
-    </div>
+    <div id="app" class="container"></div>
+    <script src="/js/stage.js"></script>
     <script src="/js/entity.js"></script>
     <script src="/js/pacman.js"></script>
     <script src="/js/index.js"></script>
