--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="app" class="container"></div>
+    <script src="/js/stage_var.js"></script>
     <script src="/js/stage.js"></script>
     <script src="/js/entity.js"></script>
     <script src="/js/pacman.js"></script>
